--- a/practice-task-v1.html
+++ b/practice-task-v1.html
@@ -6,5 +6,18 @@
     <link rel="shortcut icon" href="travel.png" type="image/x-icon" />
     <title>My Travel Blog</title>
   </head>
-  <body></body>
+  <body>
+    <!-- This is heading -->
+    <h1><i>My Travel Blog</i></h1>
+
+    <!-- task3 -->
+    <div>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium
+        assumenda exercitationem, iusto tenetur pariatur vel quod quas optio
+        sunt ab!
+        <button>Read More</button>
+      </p>
+    </div>
+  </body>
 </html>
