task4 and task5

--- a/practice-task-v1.html
+++ b/practice-task-v1.html
@@ -19,5 +19,28 @@
         <button>Read More</button>
       </p>
     </div>
+    <!-- task4 -->
+    <p>
+      I saw some interesting clothes
+      <span style="color: blue; font-weight: bold">what I bought</span>:
+    </p>
+    <ol>
+      <li>Tshirt</li>
+      <li>Pant</li>
+      <li>Shoes</li>
+    </ol>
+    <p>
+      I ate some of
+      <span style="color: blueviolet; font-weight: bold"
+        >my favourite foods</span
+      >:
+    </p>
+    <ul>
+      <li>Beef masala</li>
+      <li>Biryani</li>
+      <li>Loitta shutki vorta</li>
+    </ul>
+    <!-- task5 -->
+    <img src="biryani.jpg" alt="Biryani" width="300px" height="300px" />
   </body>
 </html>
