task6 done all task

--- a/practice-task-v1.html
+++ b/practice-task-v1.html
@@ -42,5 +42,13 @@
     </ul>
     <!-- task5 -->
     <img src="biryani.jpg" alt="Biryani" width="300px" height="300px" />
+    <!-- task6 -->
+    <br />
+    <a
+      href="https://www.youtube.com/watch?v=Ty_qxgKWuC8&list=RDTy_qxgKWuC8&start_radio=1"
+      target="_blank"
+      rel="noopener noreferrer"
+      >An interesting song</a
+    >
   </body>
 </html>
